# ults

./: .gitignore  .pdm-python  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: pytest.yml
examples/: generate.py  sample_llm_outputs.py
examples/.cache/priors/: empirical_prior_depth20_width256000_datasetwiki.npy  empirical_prior_depth20_width32000_datasetwiki.npy  prior_depth20_width32000_alpha0.0001.npy  prior_depth60_width256000_alpha0.0001.npy  prior_depth60_width32000_alpha0.0001.npy
examples/example_contexts/cnn/: sentence_1.txt  sentence_100.txt  sentence_103.txt  sentence_105.txt  sentence_107.txt  sentence_11.txt  sentence_113.txt  sentence_119.txt  sentence_123.txt  sentence_125.txt  sentence_130.txt  sentence_131.txt  sentence_132.txt  sentence_134.txt  sentence_135.txt  sentence_136.txt  sentence_137.txt  sentence_138.txt  sentence_14.txt  sentence_141.txt  sentence_143.txt  sentence_144.txt  sentence_149.txt  sentence_150.txt  sentence_151.txt  sentence_153.txt  sentence_157.txt  sentence_161.txt  sentence_164.txt  sentence_165.txt  sentence_166.txt  sentence_176.txt  sentence_177.txt  sentence_183.txt  sentence_188.txt  sentence_190.txt  sentence_191.txt  sentence_194.txt  sentence_195.txt  sentence_197.txt  (+357 more)
examples/example_contexts/reddit/: sentence_0.txt  sentence_10.txt  sentence_100.txt  sentence_1000.txt  sentence_105.txt  sentence_106.txt  sentence_107.txt  sentence_109.txt  sentence_110.txt  sentence_113.txt  sentence_115.txt  sentence_116.txt  sentence_118.txt  sentence_119.txt  sentence_120.txt  sentence_121.txt  sentence_123.txt  sentence_128.txt  sentence_129.txt  sentence_130.txt  sentence_131.txt  sentence_133.txt  sentence_136.txt  sentence_137.txt  sentence_138.txt  sentence_139.txt  sentence_140.txt  sentence_141.txt  sentence_143.txt  sentence_144.txt  sentence_145.txt  sentence_148.txt  sentence_15.txt  sentence_152.txt  sentence_153.txt  sentence_154.txt  sentence_155.txt  sentence_156.txt  sentence_157.txt  sentence_159.txt  (+500 more)
examples/example_contexts/wiki/: sentence_1.txt  sentence_10.txt  sentence_101.txt  sentence_107.txt  sentence_110.txt  sentence_114.txt  sentence_122.txt  sentence_125.txt  sentence_130.txt  sentence_134.txt  sentence_138.txt  sentence_140.txt  sentence_143.txt  sentence_145.txt  sentence_24.txt  (+161 more)
examples/ults_priors/: empirical_prior_depth40_width256000_datasetreddit.npy  empirical_prior_depth40_width32000_datasetreddit.npy  empirical_prior_depth60_width256000_datasetcnn.npy  empirical_prior_depth60_width32000_datasetcnn.npy  prior_depth20_width256000_alpha0.0001.npy  prior_depth2_width32000_alpha0.0001.npy  prior_depth40_width256000_alpha0.0001.npy  prior_depth40_width32000_alpha0.0001.npy  prior_depth40_width32128_alpha0.0001.npy
tests/: test_functional_interface.py
ults/: __init__.py  functional.py  ults.py
(+1910 files in other folders)
