[tool.poetry]
name = "ults"
version = "0.1.0"
description = "Uncertainty-Guided Likelihood-Tree Search"
authors = [
  "Julia Grosse <julia.grosse@uni-tuebingen.de>",
  "Agustinus Kristiadi <agustinus@kristia.de>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.41.1"
datasets = "^2.19.1"
networkx = "^3.3"
tqdm = "^4.66.4"
numpy = "^1.26.4"
scipy = "^1.13.1"
torch = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
