###############################################################################
#                                 Main library                                #
###############################################################################

[metadata]
name = ults
version = 0.1a1
author =
  Julia Grosse
  Agustinus Kristiadi
url = https://github.com/JuliaGrosse/ults
project_urls =
    Bug Tracker = https://github.com/JuliaGrosse/ults/issues
description = Uncertainty-guided Likelihood-Tree Search
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any
# Add all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
packages = find:
include_package_data = True
setup_requires =
  setuptools_scm
# Dependencies of the project (semicolon/line-separated):
install_requires =
    torch >= 2.0
    transformers
    datasets
    tokenizers
    networkx
# Require a specific Python version, e.g. Python 2.7 or >= 3.4
python_requires = >=3.10

[options.packages.find]
exclude = tests*

